--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:layout_above="@+id/buttonContinue"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="49dp" />
+        android:layout_marginBottom="49dp"
+        android:onClick="onClick" />
 
     <Button
         android:layout_width="match_parent"
