--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,34 +8,77 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="es.santosgarcia.caperucita_santos.Pantalla1"
-    android:background="@drawable/fondomovil5">
+    android:background="@drawable/fondomovil5"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/caperucitapresentacion"
-        android:background="#ffffff" />
+        android:id="@+id/imgprincipal"
+        android:src="@drawable/imagen1"
+        android:background="#ffffff"
+        android:nestedScrollingEnabled="false"
+        android:scaleType="centerCrop" />
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/scrollView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_weight="0.94"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sdjkabfdkhfasda hjgasdjdsa sahd gfshgd fkjash dfagk ashgd fkj ashdg fhasg dkfh gaskdhf gas kdh gfkashgdfkjhgas kdj gfkashd fg kjshdgfk shg hdfk agsdk f"
-            android:id="@+id/textView"
+            android:text="@string/texto1"
+            android:id="@+id/textoprincipal"
             android:background="#ffffff"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"
             android:paddingRight="15dp"
-            android:paddingBottom="15dp" />
+            android:paddingBottom="15dp"
+            android:textSize="20sp"
+            android:elegantTextHeight="false" />
     </ScrollView>
-</RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pregunta"
+        android:id="@+id/textView2"
+        android:layout_marginTop="15dp"
+        android:textSize="30sp"
+        android:background="#ffffff"
+        android:layout_marginBottom="15dp"
+        android:textAlignment="center" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/opciona"
+            android:id="@+id/button"
+            android:layout_weight="1"
+            android:layout_marginRight="20dp"
+            android:onClick="opciona"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/opcionb"
+            android:id="@+id/button2"
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:onClick="opcionb"/>
+    </LinearLayout>
+
+</LinearLayout>
