Medio implementado el cuadro con el video en pantalla final

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
         android:id="@+id/buttonContinue"
         android:layout_below="@+id/bttnuevapartida"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="onClickContinue" />
 
     <Button
         android:layout_width="fill_parent"
