--- a/app/src/main/res/layout/activity_pantalla_final.xml
+++ b/app/src/main/res/layout/activity_pantalla_final.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/fondomovil5"
-    tools:context="es.santosgarcia.caperucita_santos.PantallaFinal">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:paddingBottom="@dimen/activity_vertical_margin"
+android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
+android:background="@drawable/fondomovil5"
+tools:context="es.santosgarcia.caperucita_santos.PantallaFinal">
 
-    <VideoView
+<VideoView
 
-        android:id="@+id/videoView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_width="320px"
-        android:layout_height="400px"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    android:id="@+id/videoView"
+    android:layout_width="1000px"
+    android:layout_height="1000px"/>
+
 </RelativeLayout>
