Añadifa funcionalidad al boton settings del menu principal. Metidos titulos de pantalla settings y final. Boton toggle en Settings a falta de implementarlo (codigo comentado con enlace en la parte de abajo)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content"
         android:text="Settings"
         android:id="@+id/buttonSettings"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="onClickSettings" />
 
 </LinearLayout>
