--- a/app/src/main/res/layout/activity_pantalla2.xml
+++ b/app/src/main/res/layout/activity_pantalla2.xml
@@ -54,31 +54,12 @@
         android:layout_marginBottom="15dp"
         android:textAlignment="center" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/opciona"
-            android:id="@+id/button"
-            android:layout_weight="1"
-            android:layout_marginRight="20dp"
-            android:onClick="opciona"/>
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/opcionb"
-            android:id="@+id/button2"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:onClick="opcionb"/>
-    </LinearLayout>
+        android:text="@string/cont"
+        android:id="@+id/button"
+        android:onClick="continuefin"/>
 
 </LinearLayout>
